--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ configure_file(
 )
 
 if (NOT CMAKE_CXX_STANDARD)
-    set(CMAKE_CXX_STANDARD 14)
+    set(CMAKE_CXX_STANDARD 17)
 endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -37,6 +37,14 @@ PRIVATE
     ${CMAKE_BINARY_DIR}
 )
 
+target_link_libraries(${PROJECT_NAME}
+PRIVATE
+    doceditor
+    graphprim
+    docview
+)
+
+
 if (UNIX)
     install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 
@@ -44,7 +52,7 @@ if (UNIX)
     set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
     set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
     set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
-    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "My application")
+    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Documents editor application")
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "My Corporation")
     include(CPack)
 endif()
